<resources>
    <string name="app_name">ShipShape_v0</string>

    <string name="username_login_text">Username</string>
    <string name="password_login_text">Password</string>
    <string name="button_login_text">Login</string>
    <string name="name_sign_up_text">Name</string>
    <string name="button_sign_up_text">Sign Up</string>
    <string name="create_account_text">Create New Account</string>
    <string name="button_ok_text">OK</string>
    <string name="username_exists_toast">Username Already Exists</string>

    <!-- ************  Login & Sign Up Activity **************  -->
    <string name="userID">Username</string>
    <string name="password">Password</string>
    <string name="loginButton">Login</string>
    <string name="SignUpLink">New User? Sign Up Here  </string>
    <string name="loginError">Incorrect Username or Password</string>
    <string name="missingUsername">Please Enter a Username</string>

    <!-- ************ Sign Up Activity **************  -->
    <string name="fullName">Full Name</string>
    <string name="firstNameHint">First Name</string>
    <string name="lastNameHint">Last Name</string>
    <string name="userNameHint">6&#8211;20 Characters</string>
    <string name="passwordHint">Password</string>
    <string name="verifyHint">Verify Password</string>
    <string name="userName">Usernamce</string>
    <string name="signUpButton">Create Account</string>
    <string name="LoginLink">Already a User? Login Here  </string>
    <string name="signUpBlanks">Please Complete Missing Entries </string>
    <string name="signUpPasswordError">Please Verify Passwords </string>
    <string name="signUpComplete">YOU\'RE ALL SIGNED UP </string>


    <string name="my_password"></string>
    <string name="my_username"></string>
    <string name="password_unsuccessful_toast">Incorrect Password</string>
    <string name="username_does_not_exist_toast">Username Does Not Exist </string>
    <string name="unsuccessful_toast">Incorrect Username</string>
    <string name="successful_toast">Welcome!</string>

    <string name="please_enter_name_toast">Please Enter Name</string>
    <string name="please_enter_username_toast">Please Enter Username</string>
    <string name="please_enter_password_toast">Please Enter Password</string>
    <string name="password_to_short_toast">Password is to short</string>

    <string name="button_sign_out_text">Sign Out</string>
    <string name="cancel_text">Cancel</string>
    <string name="accept_text">Accept</string>

    <string name="login_failed_text">Login Failed</string>
    <string name="weak_password_text">Weak Password</string>
    <string name="invalid_email_text">Invalid Email</string>

    <string name="no_network_text">No Network Connection</string>

    <!-- Strings related to MainActivity-->
    <string name="scan_barcode_button">Scan barcode</string>
    <string name="no_barcode_captured">No barcode captured</string>
    <string name="barcode_error_format">"Error reading barcode: %1$s"</string>

    <!-- Strings related to barcode scanner -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>



</resources>
